syntax = "proto3";

option csharp_namespace = "ChatServer";

package chat;


service ChatRoom{
	rpc Create(stream Message) returns(stream Message); 
	rpc Join(stream Message) returns (stream Message);
	rpc GetUsers(RoomInfo) returns (UsersInfoResponse);
	rpc GetHistoryOfMessages(RoomInfo) returns (HistoryOfMessages);
}

message RoomInfo {
	string roomName = 1;
}
message UsersInfoResponse {
	repeated UserInfo users = 1;
}

message UserInfo {
	string userName = 1;
	int32 id = 2;
	bool isOnline = 3;
}

message Message{
	string user = 1;
	string text = 2;
	string command = 3;
}

message HistoryOfMessages {
	repeated Message messages = 1;
	repeated string dateOfMessage = 2;
}